--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.5",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
+    "framer-motion": "^10.12.4",
     "moment": "^2.29.4",
     "next": "13.2.4",
     "react": "18.2.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.3.1"
   }
 }
