--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "react-youtube": "^10.1.0",
+    "sha1": "^1.1.1",
     "swiper": "^9.2.0",
     "yup": "^1.0.2"
   },
