--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "react-youtube": "^10.1.0",
     "sha1": "^1.1.1",
     "swiper": "^9.2.0",
