--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
+    "react-easy-crop": "^4.7.4",
     "react-markdown": "^8.0.7",
     "react-toastify": "^9.1.3",
     "react-youtube": "^10.1.0",
@@ -29,7 +30,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
-    "daisyui": "^3.0.22",
     "postcss": "^8.4.21",
     "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.3.1"
