--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "framer-motion": "^10.12.4",
     "moment": "^2.29.4",
     "next": "13.2.4",
+    "nodemailer": "^6.9.3",
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
+    "react-easy-crop": "^4.7.4",
     "react-markdown": "^8.0.7",
     "react-toastify": "^9.1.3",
     "react-youtube": "^10.1.0",
