--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "react-easy-crop": "^4.7.4",
+    "react-hot-toast": "^2.4.1",
     "react-markdown": "^8.0.7",
     "react-toastify": "^9.1.3",
     "react-youtube": "^10.1.0",
